deflacue changelog
==================


v2.0.0 [2020-10-24]
-------------------
! IMPORTANT: API changes (keyword-only args introduced).
+ Switched to improved .cue parser.
* Drop support for Py2 (3.6+ supported).


v1.0.0
------
No changes, except version bumping up.


v0.3.0
------
+ Added Py2 support.
+ Now installed into /usr/local/bin/ as deflacue
* Buggy -dry and -debug args renamed into --dry and --debug


v0.2.0
------
+ Now splitting tracks with a frame precision.


v0.1.0
------
+ Basic functionality.